handle expense limit report